# pix

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt  glfw_blit.c  hw_blit.c  sf_blit.c
include/: pix.h  pix_assert.h
include/libbase/: pix_array.h  pix_error.h  pix_pack.h  pix_type.h
include/libgl/: pix_gl.h
include/libperf/: pix_clock.h
include/libthread/: pix_thread.h  pix_thread_local.h
include/libtime/: pix_time.h
include/libwin/: pix_bitmap.h  pix_color.h  pix_context.h  pix_vec2.h  pix_vec3.h  pix_window.h  pix_window_event.h
src/: main.c  main.cpp  window.cpp  window.h
src/libgl/: pix_gl.c  pix_gl_win32.c
src/libthread/: pix_thread_win32.c
src/libtime/: pix_time_win32.c
src/libwin/: pix_bitmap_x11.h  pix_window.c  pix_window_internal.c  pix_window_internal.h  pix_window_x11.c  pix_window_x11.h
src/libwin/win32/: pix_bitmap_win32.c  pix_bitmap_win32.h  pix_context_win32.c  pix_thunk.c  pix_thunk.h  pix_window_event_win32.h  pix_window_win32.c  pix_window_win32.h
src/libwin/x11/: pix_bitmap_x11.h  pix_window_x11.c  pix_window_x11.h
test/: blend2d.c  skia.cpp
